[package]
name = "es_module_lexer"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxc_allocator = "0.4.0"
oxc_ast = "0.4.0"
oxc_parser = "0.4.0"
oxc_span = "0.4.0"
rayon = "1.8.0"
